2014-06-16  Denis Excoffier  <cygwin@Denis-Excoffier.org>

	* grp.cc (getgrouplist): Fix setting ngroups to make sure to return
	the right value.

2014-06-05  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* timer.cc (timer_tracker::cancel): Demote api_fatal to system_printf,
	printing more details about odd failure condition.

2014-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (ldap_memfreeW): Remove.
	(ldap_msgfree): Import.
	* ldap.cc: Throughout, use ldap_msgfree to free LDAPMessage memory,
	rather than ldap_memfreeW.
	(cyg_ldap::next_account): Immediately abandon search when quiting from
	search.

2014-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (ldap_abandon): Remove.
	(ldap_count_entries): Import.
	(ldap_get_next_page_s): Import.
	(ldap_result): Remove.
	(ldap_searchW): Remove.
	(ldap_search_abandon_page): Import.
	(ldap_search_init_pageW): Import.
	* ldap.cc (cyg_ldap::close): Use ldap_search_abandon_page to abandon
	search.  Reset srch_id, srch_msg and srch_entry.
	(cyg_ldap::enumerate_ad_accounts): Use paged search to overcome server
	side search result set restriction.
	(cyg_ldap::next_account): Ditto.
	* ldap.h (class cyg_ldap): Add members srch_id, srch_msg and srch_entry.
	Remove member msg_id.
	(cyg_ldap::cyg_ldap): Change initialization accordingly.

2014-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (get_server_groups): Call get_user_local_groups only if
	get_logon_server succeeded.

2014-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.cc (cyg_ldap::fetch_ad_account): Take additional domain string
	parameter.  Convert into likely rootDSE string if not NULL, and use in
	subsequent call to ldap_search_stW.  Add comment to explain that this
	is not the exactly correct solution.
	* ldap.h (cyg_ldap::fetch_ad_account): Change prototype accordingly.
	* uinfo.cc (pwdgrp::fetch_account_from_windows): Always use loc_ldap
	in call to fetch_posix_offset to make sure we're fetchoinmg the posix